# mcp-authkit-quickstart

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  auth.py  config.py  docker-compose.yml  keycloak-realm.json  main.py  pyproject.toml  server.py
app/: shared.py
config/: __init__.py  keycloak-realm.json  settings.py
tools/: github.py
