[project]
name = "mcp-authkit-quickstart"
version = "0.1.0"
description = "Getting-started example for mcp-authkit — GitHub OAuth + Confluence credentials"
requires-python = ">=3.11"
dependencies = [
    "mcp-authkit[redis]>=0.1.0",
    "uvicorn[standard]>=0.30",
    "pydantic-settings>=2.6",
    "python-dotenv>=1.0",
    "httpx>=0.27",
]

# ── Dev install from source (until mcp-authkit is on PyPI) ───────────────────
# uv add --editable ../auth-lib          # local clone
# pip install "mcp-authkit[redis] @ git+https://github.com/masterela/mcp-authkit.git"
